[cod] exemplo com redux

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Example</title>
+
+
   </head>
 
   <body>
-    <div id="react-app"></div>
+    <div id="root"></div>
 <!-- <script src="static/bundles/main-236644b8b02a280ccff8.js"></script>     -->
 
     {% render_bundle 'main' %}
